--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,13 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-websocket</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-boot-starter</artifactId>
+            <version>3.0.0</version>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
@@ -68,6 +75,9 @@
         <resources>
             <resource>
                 <directory>src/main/martian-robots-client</directory>
+                <excludes>
+                    <exclude>node_modules/**</exclude>
+                </excludes>
             </resource>
             <resource>
                 <directory>src/main/resources</directory>
@@ -134,6 +144,9 @@
                             <resources>
                                 <resource>
                                     <directory>${frontend-src-dir}/build</directory>
+                                    <excludes>
+                                        <exclude>node_modules/**</exclude>
+                                    </excludes>
                                     <filtering>false</filtering>
                                 </resource>
                             </resources>
